--- a/src/app/common/notification/views/oz.central.tpl.html
+++ b/src/app/common/notification/views/oz.central.tpl.html
@@ -14,7 +14,7 @@
 			background-color : rgba(99, 101, 101, 0.55);
 			font-size: 14px;
 			font-weight: bold;
-			padding:10px;
+			padding:6px;
 			color:white;	
 			margin: 150px;	
             border-radius: 100px;
@@ -25,7 +25,7 @@
 		}
 
 	</style>
-<img  src = '../assets/images/Spinner7.gif' >
+<img  src = '../assets/images/Spinner7.gif' style="height:30px">
 	{{message}}
 
 </div>
