--- a/src/app/assets/css/oz.css
+++ b/src/app/assets/css/oz.css
@@ -582,7 +582,10 @@ top: 20px;
 left: 35px;
 }
 .tabtrackingLi{padding-left: 60px;}
-.oz-trackingUL{padding-left: 11%;padding-top: 10px;}
+.oz-trackingUL{
+  /*padding-left: 11%;*/ /*previous tracking tree for 4 tabs*/
+  padding-left: 21%;  /*new tracking tree for 3 tabs*/
+  padding-top: 10px;}
 .trackingTabContent{margin-left: 22%;margin-right: 26%;}
 .active4{ 
   position: absolute;
@@ -606,7 +609,7 @@ left: 35px;
 .activatetick{color:green;}
 .activatetickOrange{color:orange;}
 .listStyle{list-style-type: none; padding:0px;}
-.ozUpArrow{font-size: 20px;color: rgb(200, 138, 103); margin-right: 25px; margin-left: 100%;}
+.ozUpArrow{font-size: 20px;color: rgb(200, 138, 103); margin-right: 25px; margin-left: 80%;}
 .oz-datepickerTextWidth{width: 40%}
 .marginBotton10{margin-bottom: 10px;}
 .border-radius 
