--- a/src/app/assets/css/oz.css
+++ b/src/app/assets/css/oz.css
@@ -159,11 +159,11 @@ font-size: 12px;
 
 
   .seller-activated{
-    border-left: 2px solid rgb(1, 175, 1);
+    border-left: 3px solid rgb(1, 175, 1);
   }
 
   .seller-notactive{
-    border-left: 2px solid gray;
+    border-left: 3px solid #d60027;
   }
 
 
