added order process management functionality

--- a/src/app/OrderZapp/oz/views/oz.oz_content.tpl.html
+++ b/src/app/OrderZapp/oz/views/oz.oz_content.tpl.html
@@ -50,6 +50,9 @@
 
               <tab heading = "Manage Locations" ui-sref = "oz.ozWall.ozManageLocations" class = 'cursorPointerHyperlink' > </tab>
 
+
+              <tab heading = 'Order Process Configuration' ui-sref = 'oz.ozWall.ozOrderProcessCongiguration' class = 'cursorPointerHyperlink'></tab>
+
             <tab heading = "Policies" ng-click= "trigger()" ui-sref = "oz.ozWall.ozT&CContent" style = "float:right" class = "cursorPointerHyperlink" >
                 <tabset >
                       <tab heading="T&C" ui-sref = "oz.ozWall.ozT&CContent" class = "cursorPointerHyperlink" select = "getTemplateContent('TC');clearTemplatecontent();" active = "active.init"></tab>
