--- a/src/app/ProviderWall/ManageOrders/views/oz.OrderContent.tpl.html
+++ b/src/app/ProviderWall/ManageOrders/views/oz.OrderContent.tpl.html
@@ -5,7 +5,7 @@
  <span class="bold">Order No: </span> <span class="oz-contentsRight">{{order.suborderid}}</span>
 
       <span  class=" label label-info  font14 pull-right "  ng-class="{ 
-                     bgGreen1: (order.status =='orderstart' ) ,
+                     bgGreen1: (order.status =='orderreceived' ) ,
                      bgGreen: (order.status == 'accepted') ,
                      bgOrange: (order.status =='inproduction' ) ,
                      bgOrange1: (order.status == 'packing'),
@@ -245,16 +245,16 @@
 
 
 <div class="pull-right" ng-hide="order.status=='ordercomplete' || order.status=='cancelled' || order.status=='rejected'">
-        
+       
             <div class="btn-group paddingRight10"><!-- <span class="Valign">Action</span> -->
               <a class=" dropdown-toggle "  type="button" data-toggle="dropdown">
                  <span class="fa fa-ellipsis-v fa-3x prodo-cursor"></span>
               </a>
               <ul class="dropdownRightPosition dropdown-menu" style="right:4px" role="menu">
                                <!--ng-click -call showDisplay for previous menu where states not defined in ref dic  -->
-              
+            
 
-                   <li class="" ng-repeat="config in orderConfigStatus" ng-show="config.action !==null && config.order_status==order.status "> 
+                   <li class="" ng-repeat="config in orderConfigStatus" ng-show="config.action !==null && config.order_status==order.status ">   
                     <a  ng-hide="order.status =='storepickup'  || order.status =='homedelivery'" href="#"   ng-click="changeStatus(config.action , order)"><span class="capital"> {{config.action}} </span></a>
                     
                       <a href="#" ng-show=" order.status =='storepickup'"  ng-click="changeStatus('pickfromstore' , order)"><span class="capital">Pick from store  </span></a>
@@ -263,11 +263,11 @@
 
                   </li>
 
-                   <li class="" ng-show="order.status=='orderstart'"> 
+                   <li class="" ng-show="order.status=='orderreceived'"> 
                      <a href="#"   ng-click="changeStatus('reject' , order)"><span class="capital"> Reject</span></a>
                   </li>
 
-                  <li class="" ng-hide="order.status=='orderstart' || order.status=='done'">
+                  <li class="" ng-hide="order.status=='orderreceived' || order.status=='done'">
                     <a href="#"   ng-click="changeStatus('cancel' , order)"><span class="capital"> Cancel</span></a>
                   </li>
                   
@@ -311,7 +311,7 @@
             <li class="tabtrackingLi"  >
               <a  class="prodo-cursor" id="prodoCommentTab" ng-click="tab1 = true;
             tab2 = false; tab3 = false;tab4 = false;">
-              <div id="circle" ng-class="{activateOrange: (order.status=='orderstart'   )    , activate : ( order.status=='accepted' || order.status=='inproduction' || order.status=='packing' || order.status=='factorytostore' || order.status=='storepickup'  || order.status=='homedelivery' || order.status=='ordercomplete'  )  }"></div> <!-- set ngclass -->   <div id="line"></div>
+              <div id="circle" ng-class="{activateOrange: (order.status=='orderreceived'   )    , activate : ( order.status=='accepted' || order.status=='inproduction' || order.status=='packing' || order.status=='factorytostore' || order.status=='storepickup'  || order.status=='homedelivery' || order.status=='ordercomplete'  )  }"></div> <!-- set ngclass -->   <div id="line"></div>
               </a>
               <div ng-class="{active4 : tab1 == 1}"></div>
             </li>
@@ -345,7 +345,7 @@
             <div class="tab-content trackingTabContent" >
       <br/>
          <div id=""  class="oz-paddingLeft" ng-show="tab1 == true" >
-                    <p ng-style="displayAction('orderstart')" class="displaynone"><i class="oz-tickNotActive fa fa-check fa-lg" ng-class="{   activatetick : ( order.status=='orderstart' || order.status=='accepted' || order.status=='inproduction' || order.status=='packing' || order.status=='factorytostore' || order.status=='storepickup'  || order.status=='homedelivery' || order.status=='ordercomplete'  )   }"></i> Order start</p>
+                    <p ng-style="displayAction('orderreceived')" class="displaynone"><i class="oz-tickNotActive fa fa-check fa-lg" ng-class="{   activatetick : ( order.status=='orderreceived' || order.status=='accepted' || order.status=='inproduction' || order.status=='packing' || order.status=='factorytostore' || order.status=='storepickup'  || order.status=='homedelivery' || order.status=='ordercomplete'  )   }"></i> Order start</p>
 
                     <p ng-style="displayAction('accepted')" class="displaynone"><i class="oz-tickNotActive fa fa-check fa-lg" ng-class="{activatetick :  ( order.status=='accepted' || order.status=='inproduction' || order.status=='packing' || order.status=='factorytostore' || order.status=='storepickup'  || order.status=='homedelivery' || order.status=='ordercomplete'  )   }"></i> Approved</p>
          </div>
