--- a/src/app/ProviderWall/ManageOrders/views/oz.OrderContent.tpl.html
+++ b/src/app/ProviderWall/ManageOrders/views/oz.OrderContent.tpl.html
@@ -180,15 +180,15 @@
               </div>
 
               <div  class="col-md-2">
-                 <span class=" oz-contentsRight">{{product.qty}} {{product.uom}}</span>
+                 <span class=" oz-contentsRight breakword">{{product.qty}} {{product.uom}}</span>
               </div>
 
               <div  class="col-md-2">
-                 <span class=" oz-contentsRight">{{product.currency}}  {{product.orderprice/product.qty}}</span>
+                 <span class=" oz-contentsRight breakword">{{product.currency}}  {{product.orderprice/product.qty}}</span>
               </div>
 
               <div  class="col-md-2">
-                 <span class="marginLeft15 oz-contentsRight "> &#x20B9;  {{product.orderprice}}</span>
+                 <span class="marginLeft15 oz-contentsRight  breakword"> &#x20B9;  {{product.orderprice}}</span>
               </div>
 
 
@@ -213,7 +213,7 @@
           <span class="bold">Grand Total </span> 
         </div>
          <div  class="col-md-2">
-          <span class="bold"> &#x20B9;  {{order.suborder_price}} </span> 
+          <span class="bold breakword"> &#x20B9;  {{order.suborder_price}} </span> 
          </div>
        </div>
 
