--- a/src/app/ProviderWall/ManageOrders/views/oz.OrderContent.tpl.html
+++ b/src/app/ProviderWall/ManageOrders/views/oz.OrderContent.tpl.html
@@ -10,8 +10,7 @@
                      bgOrange: (order.status =='inproduction' ) ,
                      bgOrange1: (order.status == 'packing'),
                      bgOrange2: (order.status =='factorytostore' ) ,
-                     bgBlue: (order.status == 'storepickup') ,
-                     bgBlue1: (order.status =='homedelivery' ) ,
+                     bgBlue: (order.status == 'indelivery') ,
                      bgGray: (order.status == 'ordercomplete') ,
                      bgRed: (order.status =='cancelled' ) ,
                      bgRed1: (order.status == 'rejected')
@@ -184,11 +183,11 @@
               </div>
 
               <div  class="col-md-2">
-                 <span class=" oz-contentsRight breakword">{{product.currency}}  {{product.orderprice/product.qty}}</span>
+                 <span class=" oz-contentsRight breakword">{{product.currency}}  {{(product.orderprice/product.qty).toFixed(2)}}</span>
               </div>
 
               <div  class="col-md-2">
-                 <span class="marginLeft15 oz-contentsRight  breakword"> &#x20B9;  {{product.orderprice}}</span>
+                 <span class="marginLeft15 oz-contentsRight  breakword"> &#x20B9;  {{product.orderprice.toFixed(2)}}</span>
               </div>
 
 
@@ -213,7 +212,7 @@
           <span class="bold">Grand Total </span> 
         </div>
          <div  class="col-md-2">
-          <span class="bold breakword"> &#x20B9;  {{order.suborder_price}} </span> 
+          <span class="bold breakword"> &#x20B9;  {{order.suborder_price.toFixed(2)}} </span> 
          </div>
        </div>
 
@@ -272,33 +271,6 @@
                   
 
 
-                  <!--   <li class="" ng-show="showAccept==true">
-                    <a href="#" ng-click="changeStatus('accept' , order)">Accept</a>
-                  </li>
-
-                  <li class="" ng-show="showProduction==true">
-                   <a href="#" ng-click="changeStatus('production' , order)">Production</a>
-                  </li>
-
-                  <li class="" ng-show="showPacking==true" >
-                   <a href="#" ng-click="changeStatus('pack', order)">Packing</a>
-                  </li>
-
-                  <li class="" ng-show="showShiptostore==true">
-                    <a href="#" ng-click="changeStatus('shiptostore' , order)">Ship to store</a>
-                  </li>
-                  
-                  <li class="" ng-show="order.deliverytype=='home' && showDeliverytocustomer==true">
-                   <a href="#"  ng-click="changeStatus('delivertohome' , order)">Delivery to customer</a>
-                   </li>
-
-                  <li class=""  ng-show="order.deliverytype=='pickup' && showPickfromstore==true">
-                   <a href="#"  ng-click="changeStatus('pickfromstore' , order)">Pick from store</a>
-                  </li>
-
-                  <li class="" ng-show="showDone==true">
-                   <a href="#" ng-click="changeStatus('done' , order)">Done</a>
-                  </li> -->
 
                 </ul>
                </div>
@@ -310,7 +282,7 @@
             <li class="tabtrackingLi"  >
               <a  class="prodo-cursor" id="prodoCommentTab" ng-click="tab1 = true;
             tab2 = false; tab3 = false;tab4 = false;">
-              <div id="circle" ng-class="{activateOrange: (order.status=='orderreceived'   )    , activate : ( order.status=='accepted' || order.status=='inproduction' || order.status=='packing' || order.status=='factorytostore' || order.status=='storepickup'  || order.status=='homedelivery' || order.status=='ordercomplete'  )  }"></div> <!-- set ngclass -->   <div id="line"></div>
+              <div id="circle" ng-class="{activateOrange: (order.status=='orderreceived'   )    , activate : ( order.status=='accepted' || order.status=='inproduction' || order.status=='packing' || order.status=='factorytostore' || order.status=='indelivery'   || order.status=='ordercomplete'  )  }"></div> <!-- set ngclass -->   <div id="line"></div>
               </a>
               <div ng-class="{active4 : tab1 == 1}"></div>
             </li>
@@ -318,7 +290,7 @@
             <li class="tabtrackingLi"  >
               <a id="prodoCommentSearchTab" class="prodo-cursor" ng-click="tab1 = false;
             tab2 = true; tab3 = false;tab4 = false;" >
-             <div id="circle"  ng-class="{activate : (order.status=='inproduction' || order.status=='packing' || order.status=='factorytostore' || order.status=='storepickup'  || order.status=='homedelivery' || order.status=='ordercomplete'  )    }" ></div>    <div id="line"></div>
+             <div id="circle"  ng-class="{activate : (order.status=='inproduction' || order.status=='packing' || order.status=='factorytostore' || order.status=='indelivery'   || order.status=='ordercomplete'  )    }" ></div>    <div id="line"></div>
                </a>
                <div ng-class="{active4 : tab2 == 1}"></div>
             </li>
@@ -326,7 +298,7 @@
             <!--  <li class="tabtrackingLi"  >
               <a id="prodoCommentSearchTab" class="prodo-cursor" ng-click="tab1 = false;
             tab2 = false; tab3 = true;tab4 = false;" >
-               <div id="circle" ng-class="{ activate : ( order.status== 'factorytostore' || order.status=='storepickup'  || order.status=='homedelivery' || order.status=='ordercomplete'  )     }" ></div>    <div id="line"></div>
+               <div id="circle" ng-class="{ activate : ( order.status== 'factorytostore' || order.status=='indelivery'   || order.status=='ordercomplete'  )     }" ></div>    <div id="line"></div>
                </a>
                <div ng-class="{active4 : tab3 == 1}"></div>
             </li> -->
@@ -334,7 +306,7 @@
              <li class="tabtrackingLi"   >
               <a id="prodoCommentSearchTab" class="prodo-cursor" ng-click="tab1 = false;
             tab2 = false; tab3 = false;tab4 = true;" >
-               <div id="circle" ng-class="{activate : ( order.status== 'factorytostore' || order.status=='storepickup'  || order.status=='homedelivery' ||  order.status=='ordercomplete'  )     }" ></div>   
+               <div id="circle" ng-class="{activate : ( order.status== 'factorytostore' || order.status=='indelivery'   ||  order.status=='ordercomplete'  )     }" ></div>   
                </a>
                <div ng-class="{active4 : tab4 == 1}"></div>
             </li>
@@ -344,24 +316,28 @@
             <div class="tab-content trackingTabContent" >
       <br/>
          <div id=""  class="oz-paddingLeft" ng-show="tab1 == true" >
-                    <p ng-style="displayAction('orderreceived')" class="displaynone"><i class="oz-tickNotActive fa fa-check fa-lg" ng-class="{   activatetick : ( order.status=='orderreceived' || order.status=='accepted' || order.status=='inproduction' || order.status=='packing' || order.status=='factorytostore' || order.status=='storepickup'  || order.status=='homedelivery' || order.status=='ordercomplete'  )   }"></i> Order start</p>
+                    <p ng-style="displayAction('orderreceived')" class="displaynone"><i class="oz-tickNotActive fa fa-check fa-lg" ng-class="{   activatetick : ( order.status=='orderreceived' || order.status=='accepted' || order.status=='inproduction' || order.status=='packing' || order.status=='factorytostore' || order.status=='indelivery'   || order.status=='ordercomplete'  )   }"></i> Order start</p>
 
-                    <p ng-style="displayAction('accepted')" class="displaynone"><i class="oz-tickNotActive fa fa-check fa-lg" ng-class="{activatetick :  ( order.status=='accepted' || order.status=='inproduction' || order.status=='packing' || order.status=='factorytostore' || order.status=='storepickup'  || order.status=='homedelivery' || order.status=='ordercomplete'  )   }"></i> Approved</p>
+                    <p ng-style="displayAction('accepted')" class="displaynone"><i class="oz-tickNotActive fa fa-check fa-lg" ng-class="{activatetick :  ( order.status=='accepted' || order.status=='inproduction' || order.status=='packing' || order.status=='factorytostore' || order.status=='indelivery'   || order.status=='ordercomplete'  )   }"></i> Approved</p>
          </div>
 
           <div class="oz-paddingLeft" id="" ng-show="tab2 == true" >
-                   <p ng-style="displayAction('inproduction')" class="displaynone">  <i class="oz-tickNotActive fa fa-check fa-lg" ng-class="{activatetick : (order.status=='inproduction' || order.status=='packing' || order.status=='factorytostore' || order.status=='storepickup'  || order.status=='homedelivery' || order.status=='ordercomplete'  )   }"></i> In production</p>
-                   <p ng-style="displayAction('packing')" class="displaynone">  <i class="oz-tickNotActive fa fa-check fa-lg" ng-class="{activatetick :(order.status=='packing' || order.status=='factorytostore' || order.status=='storepickup'  || order.status=='homedelivery' || order.status=='ordercomplete'  )   }"></i> Packing</p>
+                   <p ng-style="displayAction('inproduction')" class="displaynone">  <i class="oz-tickNotActive fa fa-check fa-lg" ng-class="{activatetick : (order.status=='inproduction' || order.status=='packing' || order.status=='factorytostore' || order.status=='indelivery'   || order.status=='ordercomplete'  )   }"></i> In production</p>
+                   <p ng-style="displayAction('packing')" class="displaynone">  <i class="oz-tickNotActive fa fa-check fa-lg" ng-class="{activatetick :(order.status=='packing' || order.status=='factorytostore' || order.status=='indelivery'   || order.status=='ordercomplete'  )   }"></i> Packing</p>
          </div>
 
          <!--  <div  class="oz-paddingLeft" id="" ng-show="tab3 == true" >
-                   <p>  <i class="oz-tickNotActive fa fa-check fa-lg" ng-class="{activatetick :( order.status=='factorytostore' || order.status=='storepickup'  || order.status=='homedelivery' || order.status=='ordercomplete'  )   }"></i> Factory to store</p>
+                   <p>  <i class="oz-tickNotActive fa fa-check fa-lg" ng-class="{activatetick :( order.status=='factorytostore' || order.status=='indelivery'  || order.status=='ordercomplete'  )   }"></i> Factory to store</p>
          </div> -->
 
           <div class="oz-paddingLeft" id="" ng-show="tab4 == true" >
-                    <p  ng-style="displayAction('factorytostore')" class="displaynone">  <i class="oz-tickNotActive fa fa-check fa-lg" ng-class="{activatetick :( order.status=='factorytostore' || order.status=='storepickup'  || order.status=='homedelivery' || order.status=='ordercomplete'  )   }"></i> Factory to store</p>
-                    <p  ng-style="displayAction('storepickup')"  ng-show="order.deliverytype=='pickup' "  class="displaynone"><i class="oz-tickNotActive fa fa-check fa-lg" ng-class="{activatetick : (  order.status=='storepickup'  || order.status=='homedelivery' || order.status=='ordercomplete'  )   }"></i> Store pickup</p>
-                    <p  ng-style="displayAction('homedelivery')"  ng-show="order.deliverytype=='home' " class="displaynone"><i class="oz-tickNotActive fa fa-check fa-lg" ng-class="{activatetick :  (  order.status=='homedelivery' || order.status=='ordercomplete'  )   }"></i> Home delivery</p>
+                    <p  ng-style="displayAction('factorytostore')" class="displaynone">  <i class="oz-tickNotActive fa fa-check fa-lg" ng-class="{activatetick :( order.status=='factorytostore' || order.status=='indelivery'  || order.status=='ordercomplete'  )   }"></i> Factory to store</p>
+                    <p  ng-style="displayAction('indelivery')"  class="displaynone"><i class="oz-tickNotActive fa fa-check fa-lg" ng-class="{activatetick : (  order.status=='indelivery'  || order.status=='indelivery' || order.status=='ordercomplete'  )   }"></i> 
+                       <span ng-show="order.deliverytype=='pickup'">Store pickup</span>
+                       <span ng-show="order.deliverytype=='home'">Home delivery</span>
+                    </p>
+
+           
                     <p ng-style="displayAction('ordercomplete')" class="displaynone"><i class="oz-tickNotActive fa fa-check fa-lg" ng-class="{activatetick :  ( order.status=='ordercomplete'  )  }"></i> Order complete </p>
          </div>
          <div ng-show="tab1==1 || tab2==1 || tab3==1 || tab4==1" >
@@ -395,7 +371,7 @@
         <span ng-bind="order.consumer.email " class="breakword"> </span>
     </div>
      <div  class="col-md-2">
-       <div class="pull-right" ng-show="(  order.status=='packing' || order.status=='factorytostore' || order.status=='storepickup'  || order.status=='homedelivery' || order.status=='ordercomplete'  )">
+       <div class="pull-right" ng-show="(  order.status=='packing' || order.status=='factorytostore' || order.status=='indelivery'  ||  order.status=='ordercomplete'  )">
         <a ng-click="printInvoice(order.suborderid,selectedBranchId)" href="" class="btn btn-default btn-sm ">  Invoice <span class= "fa fa-print "></span></a>
        </div>
     </div>
