ui changed manage dsc

--- a/src/app/ProviderWall/ManageDiscount/views/oz.providerContent.manageDiscount.tpl.html
+++ b/src/app/ProviderWall/ManageDiscount/views/oz.providerContent.manageDiscount.tpl.html
@@ -5,13 +5,13 @@
     <ul id="tabPrice" class=" policyTab nav nav-pills" ng-init="assignDiscountCodes === 0" >
   
 
-      <li class="tabPolicyLi" ng-class="{active3 : assignDiscountCodes === 0}"  >
+      <li class="tabPolicyLi" ng-class="{active3 : assignDiscountCodes === 0}"  style = 'width:20%;'>
         <a id="prodoCommentSearchTab" class="prodo-cursor" ng-click="switchToManageDiscountCodes()" >
            Manage Discount Codes
          </a>
       </li>
 
-      <li class="tabPolicyLi" ng-class="{active3 : assignDiscountCodes === 1}" >
+      <li class="tabPolicyLi" ng-class="{active3 : assignDiscountCodes === 1}" style = 'width:20%;'>
         <a  class="prodo-cursor" id="prodoCommentTab" ng-click=" switchToAssignDiscountCodes()">
             Assign Discount Codes
         </a>
