Feature : Image upload changes to check file type and reset

--- a/src/app/ProviderWall/ManageProduct/views/oz.providerContent.manageProduct.tpl.html
+++ b/src/app/ProviderWall/ManageProduct/views/oz.providerContent.manageProduct.tpl.html
@@ -262,7 +262,7 @@
                  
 		          <tr ng-show="editMode.editStatus=='add'">
 		           <td colspan="4"><span class="bold">Attach product photo</span>
-		           	   <input type="file" class="form-control" ng-file-select="onFileSelect($files)" >
+		           	   <input type="file" class="form-control" id="addLogoImg" ng-file-select="onFileSelect($files)" >
 		           	   		  <!-- <button ng-click="upload.abort()">Cancel Upload</button> -->
 		            </td>
 		          </tr>
