--- a/src/app/ProviderWall/ManagePrices/views/oz.providerContent.managePrice.tpl.html
+++ b/src/app/ProviderWall/ManagePrices/views/oz.providerContent.managePrice.tpl.html
@@ -176,10 +176,10 @@
 
                <tr>
                  <td>
-                    <input type="text" placeholder="Please select start date" ng-model="list.holding_price.fromdate" class="form-control disableEditingMode" name="startDate"  datepicker-popup="{{format}}"  is-open="opened1" min="today"  datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" readonly="true"> 
+                    <input type="text" placeholder="Please select start date" ng-model="list.holding_price.fromdate" class="form-control disableEditingMode" name="startDate"  datepicker-popup="{{format}}"  is-open="opened1" min="today"  datepicker-options="dateOptions" date-disabled="disabled(date, mode)" max="list.holding_price.todate" ng-required="true" close-text="Close" readonly="true"> 
                  </td>
                  <td>
-                     <input type="text" placeholder="Please select start date" ng-model="list.holding_price.todate" class="form-control disableEditingMode" name="startDate"  datepicker-popup="{{format}}"  is-open="opened3" min="today"  datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close"  readonly="true">  
+                     <input type="text" placeholder="Please select start date" ng-model="list.holding_price.todate" class="form-control disableEditingMode" name="startDate"  datepicker-popup="{{format}}"  is-open="opened3" min="list.holding_price.fromdate"  datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close"  readonly="true">  
                  </td>
                </tr>
 
