--- a/src/app/ProviderWall/ManageProduct/views/oz.providerContent.manageProduct.tpl.html
+++ b/src/app/ProviderWall/ManageProduct/views/oz.providerContent.manageProduct.tpl.html
@@ -1,5 +1,5 @@
 <div style="border: 1px solid #EEE8E8; border-radius:6px; padding:10px;" class="">
-{{selectedCategoryid}}
+
  <div ng-show="ErrMsging" id="ErrMsging" class="prodo-ErrMsging" ></div>
 
 <!-- corousel -->
@@ -107,7 +107,14 @@
 
 			               <td  class="prodo-width50 " ng-show="selectedBranchId ">
 			              		<span class="bold"> Sub Category </span>
-			              		 <select  class=" form-control prodo-width50" ng-change="changeCategory(category)" ng-model="category" ng-options="category as category.categoryname for category in ProductCategoryLevel3" required ></select>
+			              		 <select ng-selected="category" class=" form-control prodo-width50" ng-change="changeCategory(category)" ng-model="category" ng-options="category as category.categoryname for category in ProductCategoryLevel3" name="subcategory" required ></select>
+
+
+                                 <div  ng-show="(form.productForm.subcategory.$dirty  && editMode.editorEnabled==true ) ||(form.productForm.submitted==true && form.productForm.subcategory.$invalid==true)" class="prodo-product-Invalid">
+								  <span ng-show="form.productForm.subcategory.$error.required">Please select sub category</span>
+								 </div>
+
+
 			              </td>
 
 
