--- a/src/app/ProviderWall/ManageSeller/views/oz.seller.manage.tpl.html
+++ b/src/app/ProviderWall/ManageSeller/views/oz.seller.manage.tpl.html
@@ -69,7 +69,7 @@
 
 					<div id="oz-signup-input-group" class="input-group">
 						<h5>Order Process Configuration:</h5>
-						<p style="font-size:12px;" class="text-muted">**Please select type of processess.</p> 
+						<p style="font-size:12px;" class="text-muted">**Process configuration helps sellers define order business process of the seller  to be handled by OrderZapp. You can select optional tasks that are appropriate for your organization, if required. OrderZapp has a set of default minimum order tasks that is mandatory for all the sellers.</p> 
 					 	<div style="margin:0px;" class="row">
 					 		<div ng-repeat="status in order_status_list" class="col-md-3">
 					 			<input type="checkbox" ng-model="status.require" ng-disabled="status.default">&nbsp;{{status.order_status}}
@@ -210,7 +210,7 @@
 
 						<div id="oz-signup-input-group" class="input-group">
 							<h5>Order Process Configuration:</h5>
-							<p style="font-size:12px;" class="text-muted">**Please select type of processess.</p> 
+							<p style="font-size:12px;" class="text-muted">**Process configuration helps sellers define order business process of the seller  to be handled by OrderZapp. You can select optional tasks that are appropriate for your organization, if required. OrderZapp has a set of default minimum order tasks that is mandatory for all the sellers. </p> 
 						 	<div style="margin:0px;" class="row">
 						 		<div ng-repeat="status in edit_order_status_list" class="col-md-5">
 						 			<input type="checkbox" ng-model="status.require" ng-disabled="status.default">&nbsp;{{status.order_status}}
